--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "not dead"
   ],
   "resolutions": {
-    "web3/**/uuid": "^7.0.0"
-  },
-  "version": "0.0.0"
+    "web3/**/uuid": "^7.0.0",
+    "@vue/cli-service/**/ansi-regex": "5.0.1"
+  }
 }
